--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
 	id 'com.android.application'
 	id 'org.jetbrains.kotlin.android'
+	id 'com.google.gms.google-services'
 }
-
+apply plugin: 'kotlin-kapt'
 android {
 	compileSdk 31
 
@@ -29,6 +30,10 @@ android {
 	kotlinOptions {
 		jvmTarget = '1.8'
 	}
+	buildFeatures {
+		viewBinding= true
+		dataBinding true
+	}
 }
 
 dependencies {
@@ -37,7 +42,29 @@ dependencies {
 	implementation 'androidx.appcompat:appcompat:1.4.0'
 	implementation 'com.google.android.material:material:1.4.0'
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+	implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
 	testImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+	api 'tk.zielony:carbon:0.16.0.1'
+
+	// ViewModel
+	implementation 'androidx.activity:activity-ktx:1.4.0'
+	implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+
+	// ViewModel & LiveData
+	implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
+	// Retrofit
+	implementation "com.squareup.retrofit2:retrofit:2.9.0"
+	implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+	implementation 'com.google.code.gson:gson:2.8.9'
+
+	// Coroutines
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+
+	//RxJava
+	implementation "io.reactivex.rxjava2:rxjava:2.2.10"
+	implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 }
