--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,8 @@ android {
 	kotlinOptions {
 		jvmTarget = '1.8'
 	}
-	buildFeatures {
-		viewBinding= true
-		dataBinding true
+	viewBinding {
+		enabled true
 	}
 }
 
@@ -43,10 +42,10 @@ dependencies {
 	implementation 'com.google.android.material:material:1.4.0'
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 	implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	testImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-	api 'tk.zielony:carbon:0.16.0.1'
 
 	// ViewModel
 	implementation 'androidx.activity:activity-ktx:1.4.0'
