--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 		android:theme="@style/Theme.Traill"
 		tools:targetApi="31">
 		<activity
-			android:name="com.alidevs.traill.ui.auth.AuthActivity"
+			android:name="com.alidevs.traill.ui.view.auth.AuthActivity"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name="com.alidevs.traill.ui.view.activity.MainActivity"
+			android:name="com.alidevs.traill.ui.view.home.MainActivity"
 			android:exported="true">
 		</activity>
 	</application>
