--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'com.android.application'
 	id 'org.jetbrains.kotlin.android'
 	id 'com.google.gms.google-services'
+	id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 apply plugin: 'kotlin-kapt'
 android {
@@ -33,6 +34,9 @@ android {
 	viewBinding {
 		enabled true
 	}
+	buildFeatures {
+		viewBinding true
+	}
 }
 
 dependencies {
@@ -43,6 +47,9 @@ dependencies {
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 	implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+	implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
+	implementation 'com.google.android.gms:play-services-maps:18.0.1'
+	implementation 'com.google.android.gms:play-services-location:19.0.0'
 	testImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -66,4 +73,5 @@ dependencies {
 	//RxJava
 	implementation "io.reactivex.rxjava2:rxjava:2.2.10"
 	implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+
 }
