--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	package="com.alidevs.traill">
 
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
 	<application
 		android:allowBackup="true"
 		android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,18 +18,29 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.Traill"
 		tools:targetApi="31">
+		<meta-data
+			android:name="com.google.android.geo.API_KEY"
+			android:value="AIzaSyCdyN3bq3L8Tsko45Jn2uM5CTRdfR-CatM" />
+
 		<activity
-			android:name="com.alidevs.traill.ui.view.auth.AuthActivity"
+			android:name=".ui.view.home.RequestRide.MapsActivity"
+			android:exported="false"
+			android:label="@string/title_activity_maps" />
+		<activity
+			android:name=".ui.MapsActivity"
+			android:exported="false"
+			android:label="@string/title_activity_maps" />
+		<activity
+			android:name=".ui.view.auth.AuthActivity"
+			android:exported="true" />
+		<activity
+			android:name=".ui.view.home.MainActivity"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-		</activity>
-		<activity
-			android:name="com.alidevs.traill.ui.view.home.MainActivity"
-			android:exported="true">
 		</activity>
 	</application>
 
