--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 		jvmTarget = '1.8'
 	}
 	viewBinding {
-		enabled =true
+		enabled true
 	}
 }
 
@@ -71,4 +71,6 @@ dependencies {
 	implementation "io.reactivex.rxjava2:rxjava:2.2.10"
 	implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 
+	// Google Maps Utils
+	implementation 'com.google.maps.android:android-maps-utils:0.5'
 }
