--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,8 @@ dependencies {
 
 	// Google Maps Utils
 	implementation 'com.google.maps.android:android-maps-utils:0.5'
+
+	// GeoFire
+	implementation 'com.firebase:geofire-android-common:3.1.0'
+
 }
