--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,19 +18,20 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.Traill"
 		tools:targetApi="31">
+
 		<meta-data
 			android:name="com.google.android.geo.API_KEY"
 			android:value="@string/GOOGLE_API_KEY" />
 
 		<activity
-			android:name="com.alidevs.traill.ui.home.RequestRide.MapsActivity"
+			android:name=".ui.home.RequestRide.MapsActivity"
 			android:exported="false"
 			android:label="@string/title_activity_maps" />
 		<activity
-			android:name="com.alidevs.traill.ui.auth.AuthActivity"
+			android:name=".ui.auth.AuthActivity"
 			android:exported="true" />
 		<activity
-			android:name="com.alidevs.traill.ui.main.MainActivity"
+			android:name=".ui.main.MainActivity"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
