--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 		jvmTarget = '1.8'
 	}
 	viewBinding {
-		enabled true
+		enabled= true
 	}
 	androidExtensions {
 		experimental = true
@@ -53,6 +53,7 @@ dependencies {
 	implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
 	implementation 'com.google.android.gms:play-services-maps:18.0.1'
 	implementation 'com.google.android.gms:play-services-location:19.0.0'
+	implementation 'androidx.preference:preference:1.1.1'
 	testImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -83,4 +84,6 @@ dependencies {
 	// GeoFire
 	implementation 'com.firebase:geofire-android-common:3.1.0'
 
+	// Lingver
+	implementation "com.github.YarikSOffice:lingver:1.3.0"
 }
